# Legacy

./: SETUP1.DBF  SETUP1~2.DBF  Setup1_old.dbf  swupdate.txt
DistillerDriver/: DistillerDriver.sln
DistillerDriver/DistillerDriver/: DistillerDriver.cpp  DistillerDriver.h  DistillerDriver.rc  DistillerDriver.vcxproj  DistillerDriver.vcxproj.filters  DistillerDriverDlg.cpp  DistillerDriverDlg.h  ReadMe.txt  resource.h  stdafx.cpp
JOTS_src/M3/: aik2_121504.tgz
JOTS_src/M3/062506/SRC2/: Makefile.am  S91AIK  aik2  aimDIO16.h  bu122104  bu_today  but2  commands.c  m3.ini  settings.c  settings.h
JOTS_src/M3/062506/SRC2/watchdog_src/: watchdog.c
PacsLite/database/: Galil Utility.mdb  JobAdmin.mdb  Maintenance.mdb  Statistics.mdb  export.csv  tracesettings.txt
PacsLite/nsincludes/: AddEditJobDlg.h  AutoFont.h  ChangePasswordDlg.h  ChangePasswordDlgResource.h  CheckDgt.h  DBLabelSelectionDlg.h  DBPanelLabelDlg.h  Database.h  DioDlg.h  HoldDlg.h  InternalSetupDlg.h  Job.h  JobNameDlg.h  NSAddEditJobDlgResource.h  NSCommPortResource.h  NSDIOmain.h  NSDeleteJobDlgResource.h  NSEnterJobNameDlgResource.h  NSSysDBase.h  (+43 more)
VB Stuff 1/: About.frm  BadScann.rtf  ConfgAdmin.vbp  ConfgAdmin.vbw  ConfigAdmin.frm  ConfigAdmin.frx  Contcomp.ini  Copy of LucentTechSP.mdb  DigitalIO.bas  LabelPrint.cls  Labeler.cls  Labeler.mdb  Labeler.vbp  Labeler.vbw  Labeler1.vbp  LabelerNEW.cls  Main.bas  Main.frm  Message.frx  Microscan.cls  MotionControl.cls  OpenJob.frm  OpenJob.frx  Queue.cls  Resources.h  SerialComm.frm  THETA0.ZPL  Utilities.bas  labeler.VBZ  lucenttechSP.mdb  theta2.zpl
(+830 files in other folders)
