## Process this file with automake to produce Makefile.in

## Created by Anjuta - will be overwritten
## If you don't want it to overwrite it,
## 	Please disable it in the Anjuta project configuration

INCLUDES =

AM_CFLAGS =\
	 -Wall\
	 -g

bin_PROGRAMS = aik2

aik2_SOURCES = \
	main.c\
	input.c\
	settings.c\
	settings.h\
	serial.c\
	serial.h\
	csv.c\
	csv.h\
	input.h\
	commands.c\
	commands.h\
	gpio.c\
	gpio.h

aik2_LDFLAGS = 

aik2_LDADD = 

